fix: (#39) remove final Lombok handler usage